# perseus

./: README.md  aes.py  backend_mv.py  chi.py  circuit_aes.py  gadget.py  gadget_graph.py  pyproject.toml  rp_args.py
paper_scripts/: script_tab1.sh  script_tab2.sh  script_tab3.sh
rbackend/src/: lib.rs
