[project]
name = "tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.0",
    "pgmpy>=1.0.0",
    "scipy>=1.15.3",
    "tqdm>=4.67.1",
    "verifmsi",
    "rbackend",
]

[tool.uv.sources]
verifmsi = { git = "https://github.com/cassiersg/VerifMSI", rev = "b75fad3efefa4c9218f7aeb8d71a5785bd95e70a" }
rbackend = { path = "./rbackend" }

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
]
